--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#" class="news__more">Читать всё</a>
             </div>
             <div class="news__grid">
-                <div class="news__card news_card-num1">
+                <div class="news__card news__1">
                     <div class="news__card-img">
                         <img src="./assets/img/grid_pic.png" alt="img_grid">
                     </div>
@@ -29,24 +29,24 @@
                         <a href="#" class="news__card-link">Подробнее</a>
                     </div>
                 </div>
-                <div class="news__card">
+                <div class="news__card news__2">
                     <div class="news__card-text">
                         <div class="news__card-title">Африканский кофе Кения АА</div>
                         <p>Кения АА – у этого кофе, из африканской страны, репутация одного из самых вкусных и ярких сортов в мире. Многие обжарщики высоко оценивают местные разновидности высокогорной арабики.</p>
                         <a href="#" class="news__card-link">Подробнее</a>
                     </div>
                 </div>
-                <div class="news__card">
+                <div class="news__card news__4">
+                    <div class="news__card-text">
+                        <div class="news__card-title">Африканский кофе Кения АА</div>
+                        <p>Кения АА – у этого кофе, из африканской страны, репутация одного из самых вкусных и ярких сортов в мире. Многие обжарщики высоко оценивают местные разновидности высокогорной арабики.</p>
+                        <a href="#" class="news__card-link">Подробнее</a>
+                    </div>
+                </div>
+                <div class="news__card news__3">
                     <div class="news__card-img">
                         <img src="./assets/img/grid_pic.png" alt="img_grid">
                     </div>
-                    <div class="news__card-text">
-                        <div class="news__card-title">Африканский кофе Кения АА</div>
-                        <p>Кения АА – у этого кофе, из африканской страны, репутация одного из самых вкусных и ярких сортов в мире. Многие обжарщики высоко оценивают местные разновидности высокогорной арабики.</p>
-                        <a href="#" class="news__card-link">Подробнее</a>
-                    </div>
-                </div>
-                <div class="news__card">
                     <div class="news__card-text">
                         <div class="news__card-title">Танзанийский кофе. Откуда он взялся и почему мы его так любим?</div>
                         <p>Танзания – красивая африканская страна. Именно здесь расположены легендарные географические объекты – вулкан Килиманджаро и озеро Виктория. Но наш интерес вызван не столько природными красотами, сколько кофе...</p>
